--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,12 +1,12 @@
 VERSION=0.1.5
 TARGET=xca-$(VERSION)
-GCC=c++
+GCC=g++ -Wall
 INC=-I$(QTDIR)/include
 LPATH=-L$(QTDIR)/lib
 LIBS=-lqt -lcrypto -ldb_cxx
 
 PKIOBJS=pki_base.o pki_key.o pki_x509req.o
-DBOBJS=db_base.o db_key.o
+DBOBJS=db_base.o db_key.o db_x509req.o
      
 
 all: libpki.a libxcadb.a
