added rough x509 cert handling

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -5,19 +5,17 @@ INC=-I$(QTDIR)/include
 LPATH=-L$(QTDIR)/lib
 LIBS=-lqt -lcrypto -ldb_cxx
 
-PKIOBJS=pki_base.o pki_key.o pki_x509req.o
-DBOBJS=db_base.o db_key.o db_x509req.o
+PKIOBJS=pki_base.o pki_key.o pki_x509req.o pki_x509.o
+DBOBJS=db_base.o db_key.o db_x509req.o db_x509.o
      
 
 all: libpki.a libxcadb.a
 
 libpki.a: $(PKIOBJS)
 	ar rcs libpki.a $(PKIOBJS)
-	ranlib libpki.a
 
 libxcadb.a: $(DBOBJS)
 	ar rcs libxcadb.a $(DBOBJS)
-	ranlib libxcadb.a
 	
 %.o: %.cpp %.h
 	$(GCC) -c $(INC) $<
