Signatures can be done with requests and from scratch, Certificate for signing can be self or foreign, password is saved as md5sum, bugs in displaying requests in list, and showing their keys solved same with certs

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,4 +1,3 @@
-VERSION=0.1.5
 TARGET=xca-$(VERSION)
 GCC=g++ -Wall
 LPATH=-L$(QTDIR)/lib
@@ -17,7 +16,7 @@ libxcadb.a: $(DBOBJS)
 	ar rcs libxcadb.a $(DBOBJS)
 	
 %.o: %.cpp %.h
-	$(GCC) -c $(INC) $<
+	$(GCC) $(CFLAGS) -c $(INC) -DVER=\"$(VERSION)\" -DPREFIX=\"$(PREFIX)\" $<
 
 clean:
 	rm -rf *~ *.o *.a
