more translation pkcs12 export added

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -3,7 +3,7 @@ GCC=g++ -Wall
 LPATH=-L$(QTDIR)/lib
 LIBS=-lqt -lcrypto -ldb_cxx
 
-PKIOBJS=pki_base.o pki_key.o pki_x509req.o pki_x509.o
+PKIOBJS=pki_base.o pki_key.o pki_x509req.o pki_x509.o pki_pkcs12.o
 DBOBJS=db_base.o db_key.o db_x509req.o db_x509.o
      
 
