--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -1,7 +1,15 @@
+#
+#  @configure_input@
+#
+
+VERSION=@PACKAGE_VERSION@
 TARGET=xca-$(VERSION)
-GCC=g++ -Wall
-LPATH=-L$(QTDIR)/lib
-LIBS=-lqt -lcrypto -ldb_cxx
+
+GCC=@CXX@
+CPPFLAGS=@CPPFLAGS@ -Wall -g
+
+##############################################
+
 
 PKIOBJS=pki_base.o pki_key.o pki_x509req.o pki_x509.o pki_pkcs12.o
 DBOBJS=db_base.o db_key.o db_x509req.o db_x509.o
@@ -16,8 +24,8 @@ libxcadb.a: $(DBOBJS)
 	ar rcs libxcadb.a $(DBOBJS)
 	
 %.o: %.cpp %.h
-	$(GCC) $(CFLAGS) -c $(INC) -DVER=\"$(VERSION)\" -DPREFIX=\"$(PREFIX)\" $<
+	$(GCC) $(CPPFLAGS) -c $(INC) -DVER=\"$(VERSION)\" -DPREFIX=\"@prefix@/share/xca\" $<
 
 clean:
-	rm -rf *~ *.o *.a
+	rm -rf *~ *.o *.a Makefile
 
