--- a/Makefile.in
+++ b/Makefile.in
@@ -7,7 +7,7 @@ TAG=$(shell echo "V.$(VERSION)" |sed "s/\./_/g" )
 TARGET=xca-$(VERSION)
 
 GCC=@CXX@
-CPPFLAGS=@CPPFLAGS@ @QTINC@ -Wall -g
+CPPFLAGS=@CPPFLAGS@ -Wall -g
 
 LIBS=-Llib @LDFLAGS@ @LIBS@ -lxcadb -lpki
 MOC=@MOC@
@@ -63,17 +63,21 @@ libs:
 
 clean:
 	make -C lib clean
-	rm -rf *_MOC.cpp *_UI.h *_UI.cpp *~ *.o xca Makefile configure config.cache
+	rm -rf *_MOC.cpp *_UI.h *_UI.cpp *~ *.o xca 
+
+distclean: clean	
+	Makefile config.cache config.h
 
 dist: 
 	rm -rf ../$(TARGET)
 	cvs export -r $(TAG) -d ../$(TARGET) xca
 	rcs2log >> ../$(TARGET)/CHANGELOG 
+	(cd ../$(TARGET); autoconf )
 	(cd ..; tar zcf $(TARGET).tar.gz $(TARGET) )
 	rm -rf ../$(TARGET)
 	
 install: xca
-	install -m 755 -o root -g root xca @prefix@/bin
-	install -m 755 -o root -g root -d @prefix@/share/xca
-	install -m 644 -o root -g root *.png @prefix@/share/xca
+	install -m 755 -o root -g root xca $(DESTDIR)@prefix@/bin
+	install -m 755 -o root -g root -d $(DESTDIR)@prefix@/share/xca
+	install -m 644 -o root -g root img/*.png $(DESTDIR)@prefix@/share/xca
 	
