--- a/Makefile.in
+++ b/Makefile.in
@@ -66,7 +66,7 @@ clean:
 	rm -rf *_MOC.cpp *_UI.h *_UI.cpp *~ *.o xca 
 
 distclean: clean	
-	Makefile config.cache config.h
+	rm -f Makefile config.cache config.h
 
 dist: 
 	rm -rf ../$(TARGET)
