--- a/Makefile.in
+++ b/Makefile.in
@@ -29,6 +29,7 @@ OBJS=NewKey_UI.o NewKey_UI_MOC.o \
      NewX509_2_UI.o NewX509_2_UI_MOC.o \
      NewX509.o NewX509_MOC.o \
      CertDetail_UI.o CertDetail_UI_MOC.o \
+     Rename_UI.o Rename_UI_MOC.o \
      ExportKey.o ExportKey_MOC.o \
      MainWindow.o MainWindow_MOC.o \
      MainWindowKeys.o MainWindowX509Req.o MainWindowX509.o \
@@ -41,7 +42,8 @@ re: clean all
 MainWindow.h: MainWindow_UI.h KeyDetail_UI.h \
 	      PassRead_UI.h PassWrite_UI.h ExportKey_UI.h \
 	      NewX509Req_UI.h NewKey_UI.h ReqDetail_UI.h \
-	      NewX509_UI.h CertDetail_UI.h NewX509_1_UI.h NewX509_2_UI.h
+	      NewX509_UI.h CertDetail_UI.h NewX509_1_UI.h \
+	      NewX509_2_UI.h Rename_UI.h
 
 %.o: %.cpp
 	$(GCC) $(CPPFLAGS) -DVER=\"$(VERSION)\" -DPREFIX=\"@prefix@/share/xca\" -c $<
