--- a/Makefile.in
+++ b/Makefile.in
@@ -74,7 +74,7 @@ dist:
 	rm -rf ../$(TARGET)
 	cvs export -r $(TAG) -d ../$(TARGET) xca
 	rcs2log >> ../$(TARGET)/CHANGELOG 
-	(cd ../$(TARGET); autoconf )
+	(cd ../$(TARGET); autoconf; lrelease -v xca.pro )
 	(cd ..; tar zcf $(TARGET).tar.gz $(TARGET) )
 	rm -rf ../$(TARGET)
 	
