--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 # Process this file with autoconf to produce a configure script.
 
 
-AC_INIT(xca, 0.2.2a)
+AC_INIT(xca, 0.2.3)
 AC_CONFIG_SRCDIR([MainWindow.h])
 AC_CONFIG_HEADERS([config.h])
 
@@ -23,11 +23,10 @@ AC_CHECK_LIB([stdc++], [atexit])
 AC_CHECK_LIB([db3_cxx], [atexit])
 AC_CHECK_LIB([db_cxx], [atexit])
 AC_CHECK_LIB([qt], [atexit])
-#AC_CHECK_LIB([qt-mt], [atexit])
 
 AC_LANG(C++)
 
-AC_CHECK_HEADERS(evp.h openssl/evp.h db3/db_cxx.h db/db_cxx.h db_cxx.h)
+AC_CHECK_HEADERS(evp.h openssl/evp.h db3/db_cxx.h db/db_cxx.h db_cxx.h qaccessible.h)
 
 AC_PATH_PROG(MOC,moc,[moc],[$PATH])
 AC_PATH_PROG(UIC,uic,[uic],[$PATH])
