Copyright changed to BSD-license Licenseinformation added to each *.cpp *.h file File export diealog bug removed

--- a/Makefile.in
+++ b/Makefile.in
@@ -37,6 +37,7 @@ OBJS=NewKey_UI.o NewKey_UI_MOC.o \
      main.o
 
 all: libs $(OBJS) xca
+	@echo -e "\n\n***********************************************\nIf you have comments, compilingproblems, bugs or suggestions,\ndon't hesitate to contact me at: christian@hohnstaedt.de\n************************************************************"
 
 re: clean all
 
