--- a/Makefile.in
+++ b/Makefile.in
@@ -26,9 +26,10 @@ OBJS=NewKey_UI.o NewKey_UI_MOC.o \
      PassWrite_UI.o PassWrite_UI_MOC.o \
      ExportKey_UI.o ExportKey_UI_MOC.o \
      NewX509Req_UI.o NewX509Req_UI_MOC.o \
-     NewX509_UI.o NewX509_UI_MOC.o \
+     NewX509_0_UI.o NewX509_0_UI_MOC.o \
      NewX509_1_UI.o NewX509_1_UI_MOC.o \
      NewX509_2_UI.o NewX509_2_UI_MOC.o \
+     NewX509_3_UI.o NewX509_3_UI_MOC.o \
      NewX509.o NewX509_MOC.o \
      CertDetail_UI.o CertDetail_UI_MOC.o \
      Rename_UI.o Rename_UI_MOC.o \
@@ -47,19 +48,31 @@ MainWindow.h: MainWindow_UI.h KeyDetail_UI.h \
 	      PassRead_UI.h PassWrite_UI.h ExportKey_UI.h \
 	      NewX509Req_UI.h NewKey_UI.h ReqDetail_UI.h \
 	      NewX509_UI.h CertDetail_UI.h NewX509_1_UI.h \
-	      NewX509_2_UI.h Rename_UI.h TrustState_UI.h
+	      NewX509_2_UI.h NewX509_3_UI.h Rename_UI.h TrustState_UI.h
 
 %.o: %.cpp
-	$(GCC) $(CPPFLAGS) -DVER=\"$(VERSION)\" -DPREFIX=\"@prefix@/share/xca\" -c $<
+	$(GCC) $(CPPFLAGS) -DVER=\"$(VERSION)\" -DPREFIX=\"@prefix@/share/xca\" -c $< -o $@
 
 %_MOC.cpp: %.h
 	$(MOC) $< -o $@
 
-%_UI.h: %.ui
-	$(UIC) -o $@ $<
+NewX509_%.mui:	NewX509_%.ui
+	cat $< | sed s/QDialog/NewX509/ > $@
 
-%_UI.cpp: %_UI.h %.ui
-	$(UIC) -o $@ -i $^
+%.mui:	%.ui
+	cp $< $@
+
+#NewX509_%_UI.h: NewX509.h NewX509_%.mui
+#	$(UIC) -o $@ $<
+#	 
+#NewX509_%_UI.cpp: NewX509_%_UI.h NewX509_%.mui
+#	$(UIC) -o $@ -subimpl NewX509 $^
+
+%_UI.h: %.mui
+	$(UIC) -o $@ $<
+	 
+%_UI.cpp: %_UI.h %.mui
+	$(UIC) -o $@ -impl $^
 
 xca: $(OBJS) lib/libxcadb.a lib/libpki.a
 	$(GCC) $(CPPFLAGS) $(INC) $(LPATH) $(OBJS) $(LIBS) -o xca
@@ -79,7 +92,7 @@ dist:
 	rm -rf ../$(TARGET)
 	cvs export -r $(TAG) -d ../$(TARGET) xca
 	rcs2log >> ../$(TARGET)/CHANGELOG 
-	(cd ../$(TARGET); autoconf; lrelease xca.pro; cat rpm/xca.spec |sed s/VERSION/$(VERSION)/g >rpm/$(TARGET)-1.spec )
+	(cd ../$(TARGET); autoconf; lrelease xca.pro; cat rpm/xca.spec |sed s/VERSION/$(VERSION)/g >rpm/$(TARGET)-1.spec; rm rpm/xca.spec )
 	(cd ..; tar zcf $(TARGET).tar.gz $(TARGET) )
 	rm -rf ../$(TARGET)
 	
