--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -25,7 +25,7 @@ libpki.a: $(PKIOBJS)
 libxcadb.a: $(DBOBJS)
 	ar rcs libxcadb.a $(DBOBJS)
 	
-%_MOC.cpp: %.h
+%_MOC.cpp: %.h %.cpp
 	$(MOC) $< -o $@
 	
 %.o: %.cpp %.h
