--- a/Makefile.in
+++ b/Makefile.in
@@ -67,20 +67,20 @@ distclean: clean
 dist: 
 	rm -rf ../$(TARGET)
 	cvs export -r $(TAG) -d ../$(TARGET) xca
-	rcs2log >> ../$(TARGET)/CHANGELOG 
-	(cd ../$(TARGET); autoconf; lrelease xca.pro; cat rpm/xca.spec |sed s/VERSION/$(VERSION)/g >rpm/$(TARGET)-1.spec; rm rpm/xca.spec )
+	(cd ../$(TARGET);  autoconf; \
+		./mkxcapro.sh; lrelease xca.pro; \
+		cat rpm/xca.spec debian/changelog |sed s/VERSION/$(VERSION)/g >rpm/$(TARGET)-1.spec; \
+		rm rpm/xca.spec )
 	(cd ..; tar zcf $(TARGET).tar.gz $(TARGET) )
-	rm -rf ../$(TARGET)
+	#rm -rf ../$(TARGET)
 	
 install: xca
 	strip xca
 	install -m 755 -o root -g root xca $(DESTDIR)@prefix@/bin
 	install -m 755 -o root -g root -d $(DESTDIR)@prefix@/share/xca
 	install -m 644 -o root -g root img/*.png $(DESTDIR)@prefix@/share/xca
+	install -m 644 -o root -g root xca_??.qm $(DESTDIR)@prefix@/share/xca
 	
-
-.SECONDARY:
-
 %_MOC.cpp: %.h %.cpp
 	$(MOC) $< -o $@
 
