Segfaults removed instead of rename.ui there is QInputDialog setting of CA serial added

--- a/Makefile.in
+++ b/Makefile.in
@@ -28,7 +28,6 @@ OBJS=NewKey_UI.o NewKey_UI_MOC.o \
      NewX509_UI.o NewX509_UI_MOC.o \
      NewX509.o NewX509_MOC.o \
      CertDetail_UI.o CertDetail_UI_MOC.o \
-     Rename_UI.o Rename_UI_MOC.o \
      ExportKey.o ExportKey_MOC.o \
      TrustState_UI.o TrustState_UI_MOC.o \
      MainWindow.o MainWindow_MOC.o \
@@ -44,7 +43,7 @@ MainWindow.h: MainWindow_UI.h KeyDetail_UI.h \
 	      PassRead_UI.h PassWrite_UI.h ExportKey_UI.h \
 	      NewKey_UI.h ReqDetail_UI.h \
 	      CertDetail_UI.h NewX509.h  NewX509_UI.h\
-	      Rename_UI.h TrustState_UI.h
+	      TrustState_UI.h
 
 %.o: %.cpp
 	$(GCC) $(CPPFLAGS) -DVER=\"$(VERSION)\" -DPREFIX=\"@prefix@/share/xca\" -c $< -o $@
