--- a/Makefile.in
+++ b/Makefile.in
@@ -30,9 +30,9 @@ MOC_CPP=$(patsubst %,moc_%.cpp,$(MOCNAMES))
 UI_CPP=$(patsubst %, %.cpp, $(UINAMES))
 UI_H=$(patsubst %, %.h, $(UINAMES))
 
-all: libs $(UI_H) $(OBJS) xca
+all: win libs $(OBJS) xca
 
-win: $(MOC_CPP) $(UI_CPP) $(UI_H)
+win: $(UI_CPP) $(UI_H) $(MOC_CPP)
 	make -C lib win
 
 re: clean all
@@ -82,3 +82,4 @@ moc_%.cpp: %.h %.cpp
 %.cpp: %.h %.ui
 	$(UIC) -o $@ -impl $^
 
+.INTERMEDIATE: $(MOC_CPP) $(UI_CPP) $(UI_H)
