--- a/Makefile.in
+++ b/Makefile.in
@@ -83,4 +83,4 @@ moc_%.cpp: %.h %.cpp
 %.cpp: %.h %.ui
 	$(UIC) -o $@ -impl $^
 
-.INTERMEDIATE:  $(UI_CPP) $(UI_H) $(MOC_CPP)
+.SECONDARY:  $(UI_CPP) $(UI_H) $(MOC_CPP)
